--- a/LeadYourWay.API/appsettings.json
+++ b/LeadYourWay.API/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "learningCenterConnection": "Server=localhost,3306;Uid=root;Pwd=LaUpc123*;Database=LearningCenterDB"
+    "LeadYourWayConnection": "Server=localhost,3306;Uid=root;Pwd=1234;Database=LeadYourWayDB"
   },
   "AllowedHosts": "*"
 }
